Renamed to BLE-IOT-Connector

--- a/IoTstarter/BLE-IOT-Connector-Info.plist
+++ b/IoTstarter/BLE-IOT-Connector-Info.plist
@@ -24,6 +24,8 @@
 	<string>1.0</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>IoTStarter requires use of your location</string>
 	<key>UILaunchStoryboardName</key>
 	<string>Launch Screen</string>
 	<key>UIMainStoryboardFile</key>
