--- a/IoTstarter/BLE-IOT-Connector-Info.plist
+++ b/IoTstarter/BLE-IOT-Connector-Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>IoT Starter</string>
+	<string>BLE-IOT-Connector</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
